<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:background="@color/blue"
            app:navigationIcon="@drawable/back"
            app:title="@string/setting"
            app:titleTextColor="@color/white_day"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@color/light_gray"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/normal"
            android:textColor="@color/gray_day"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_down_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="y"
            app:hasLine="true"
            app:sigS="@string/down_auto_sig"
            app:titleS="@string/down_auto"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_no_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="y"
            app:hasLine="true"
            app:sigS="@string/no_picture_sig"
            app:titleS="@string/no_picture"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_big_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="y"
            app:hasLine="false"
            app:titleS="@string/big_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@color/light_gray"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/other"
            android:textColor="@color/gray_day"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_push_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="y"
            app:hasLine="true"
            app:titleS="@string/push_info"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_comment_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="y"
            app:hasLine="true"
            app:titleS="@string/comment_share"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="n"
            app:hasLine="true"
            app:titleS="@string/clear_cache"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="n"
            app:hasLine="false"
            app:sigS="@string/version"
            app:titleS="@string/update"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_5"
            android:background="@color/light_gray"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/feedback"
            android:textColor="@color/gray_day"/>

        <com.example.zhaoting.myapplication.SettingView
            android:id="@+id/id_setting_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkB="false"
            app:hasCheckB="n"
            app:hasLine="false"
            app:titleS="@string/suggestion"/>

    </LinearLayout>
</ScrollView>